--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<div id="root">Hello World</div>
+		<div id="root"></div>
+
+		<script src="./src/js/index.js"></script>
 	</body>
 </html>
