--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	<body>
 		<div id="root"></div>
 
-		<script src="./src/js/index.js"></script>
+		<script src="./dist/app.js"></script>
 	</body>
 </html>
