--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
+		<meta
+			http-equiv="Content-Security-Policy"
+			content="script-src 'self' 'unsafe-eval'; object-src 'self'; script-src-elem 'self' https://dev.virtualearth.net"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="../node_modules/cesium/Source/Widgets/widgets.css" />
 		<title>Document</title>
 	</head>
 	<body>
 		<div id="root"></div>
 
-		<script src="./dist/app.js"></script>
+		<script src="./app.js"></script>
 	</body>
 </html>
